Fix faucets on mobile

--- a/_sass/style.sass
+++ b/_sass/style.sass
@@ -680,6 +680,8 @@ footer *
 
 .faucet
   bottom: 6px
+  @media only screen and (max-width: 601px)
+    bottom: 0px
 
 .single-can
   margin: 0
